|-- FIXED -| Missing padding on .section-header

--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -428,7 +428,7 @@ template {
 
 .section-header {
   text-align: var(--section-header-align);
-  padding: var(--section-body-padding);
+  padding: var(--section-padding);
 }
 
 .section-body {
